src/objects/Queue__c.object
<CustomObject>
    <fields>
        <fullName>EventName__c</fullName>
        <label>Event name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionStackTrace__c</fullName>
        <label>Exception stack trace</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IgnoredByTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignored by trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>CREATED</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERROR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>Hoje</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Hoje</label>
    </listViews>
    <listViews>
        <fullName>MKTPLACE_CASE_CLOSE_GIBA_TO_SALESFORCE</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EventName__c</field>
            <operation>equals</operation>
            <value>MKTPLACE_CASE_CLOSE_GIBA_TO_SALESFORCE</value>
        </filters>
        <label>MKTPLACE_CASE_CLOSE_GIBA_TO_SALESFORCE</label>
    </listViews>
    <listViews>
        <fullName>MKTPLACE_CASE_CLOSE_SALESFORCE_TO_GIBA</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EventName__c</field>
            <operation>equals</operation>
            <value>MKTPLACE_CASE_CLOSE_SALESFORCE_TO_GIBA</value>
        </filters>
        <label>MKTPLACE_CASE_CLOSE_SALESFORCE_TO_GIBA</label>
    </listViews>
    <listViews>
        <fullName>MKTPLACE_CASE_COMMENT_SALESFORCE_TO_GIBA</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EventName__c</field>
            <operation>equals</operation>
            <value>MKTPLACE_CASE_COMMENT_SALESFORCE_TO_GIBA</value>
        </filters>
        <label>MKTPLACE_CASE_COMMENT_SALESFORCE_TO_GIBA</label>
    </listViews>
    <listViews>
        <fullName>MKTPLACE_CASE_COMMENT_TO_SALESFORCE</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EventName__c</field>
            <operation>equals</operation>
            <value>MKTPLACE_CASE_COMMENT_TO_SALESFORCE</value>
        </filters>
        <label>MKTPLACE_CASE_COMMENT_TO_SALESFORCE</label>
    </listViews>
    <listViews>
        <fullName>MKTPLACE_CASE_OPEN_GIBA_TO_SALESFORCE</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EventName__c</field>
            <operation>equals</operation>
            <value>MKTPLACE_CASE_OPEN_GIBA_TO_SALESFORCE</value>
        </filters>
        <label>MKTPLACE_CASE_OPEN_GIBA_TO_SALESFORCE</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Queue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>